parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONCATSTR
    DOSPUNTOS
    LCORCHETE
    RCORCHETE

Grammar

Rule 0     S' -> program
Rule 1     program -> import declaracion_sentencias
Rule 2     program -> import
Rule 3     program -> declaracion_sentencias
Rule 4     declaracion_sentencias -> sentencias declaracion_sentencias
Rule 5     declaracion_sentencias -> sentencias
Rule 6     sentencias -> sentassign
Rule 7     sentencias -> call_function CIERRE
Rule 8     sentencias -> sentif
Rule 9     sentencias -> sentecho
Rule 10    sentencias -> sentfunc
Rule 11    sentencias -> sentreturn
Rule 12    sentencias -> sentfor
Rule 13    sentencias -> sentwhile
Rule 14    sentencias -> sentdowhile
Rule 15    sentreturn -> RETURN type CIERRE
Rule 16    sentreturn -> RETURN cond CIERRE
Rule 17    sentecho -> ECHO typevar CIERRE
Rule 18    sentecho -> ECHO exp CIERRE
Rule 19    sentecho -> ECHO cond CIERRE
Rule 20    sentif -> IF genif auxsentif
Rule 21    auxsentif -> ELSE IF genif auxsentif
Rule 22    auxsentif -> ELSE LCURBRACE declaracion_sentencias RCURBRACE
Rule 23    auxsentif -> empty
Rule 24    genif -> LPARENT cond RPARENT LCURBRACE declaracion_sentencias RCURBRACE
Rule 25    sentassign -> ID EQUAL exp CIERRE
Rule 26    sentassign -> ID PLUS PLUS CIERRE
Rule 27    sentassign -> ID MINUS MINUS CIERRE
Rule 28    bool -> TRUE
Rule 29    bool -> FALSE
Rule 30    oplogicos -> AND
Rule 31    oplogicos -> OR
Rule 32    oplogicos -> XOR
Rule 33    oplogicos -> NOT
Rule 34    exp -> expsimple opcomparacion expsimple
Rule 35    exp -> LPARENT expsimple opcomparacion expsimple RPARENT
Rule 36    exp -> expsimple
Rule 37    opcomparacion -> IGUAL
Rule 38    opcomparacion -> NOIGUAL
Rule 39    opcomparacion -> IDENTICO
Rule 40    opcomparacion -> MAYOR
Rule 41    opcomparacion -> MAYORIG
Rule 42    opcomparacion -> MENOR
Rule 43    opcomparacion -> MENORIG
Rule 44    expsimple -> expsimple opsuma term
Rule 45    expsimple -> term
Rule 46    term -> term opmult factor
Rule 47    term -> factor
Rule 48    factor -> INTEGER
Rule 49    factor -> ID
Rule 50    factor -> call_function
Rule 51    factor -> LPARENT expsimple RPARENT
Rule 52    typevar -> INTEGER
Rule 53    typevar -> STRING
Rule 54    typevar -> STRINGG
Rule 55    typevar -> TRUE
Rule 56    typevar -> FALSE
Rule 57    opsuma -> PLUS
Rule 58    opsuma -> MINUS
Rule 59    opmult -> TIMES
Rule 60    opmult -> DIV
Rule 61    opmult -> MODULO
Rule 62    opmult -> EXPONENCIACION
Rule 63    cond -> type
Rule 64    cond -> cond opcomparacion cond
Rule 65    cond -> cond oplogicos cond
Rule 66    cond -> LPARENT type RPARENT
Rule 67    cond -> LPARENT cond RPARENT
Rule 68    type -> typevar
Rule 69    type -> var_declaration_gen
Rule 70    var_declaration_gen -> ID
Rule 71    var_declaration_gen -> ID PLUS PLUS
Rule 72    var_declaration_gen -> ID MINUS MINUS
Rule 73    var_declaration_gen -> MINUS MINUS ID
Rule 74    var_declaration_gen -> PLUS PLUS ID
Rule 75    var_declaration_gen -> typevar
Rule 76    var_declaration_gen -> exp
Rule 77    arg -> var_declaration_gen
Rule 78    arg -> type
Rule 79    arg -> expsimple
Rule 80    arg -> type COMMA arg
Rule 81    arg -> STRING
Rule 82    arg -> STRINGG
Rule 83    arg -> var_declaration_gen COMMA arg
Rule 84    arg -> STRING COMMA arg
Rule 85    arg -> STRINGG COMMA arg
Rule 86    arg -> <empty>
Rule 87    argfunc -> ID
Rule 88    argfunc -> ID COMMA argfunc
Rule 89    argfunc -> <empty>
Rule 90    sentfunc -> FUNCTION NFUNCTION LPARENT argfunc RPARENT LCURBRACE declaracion_sentencias RCURBRACE
Rule 91    call_function -> NFUNCTION
Rule 92    call_function -> NFUNCTION LPARENT arg RPARENT
Rule 93    sentfor -> FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE expsimple RPARENT LCURBRACE declaracion_sentencias RCURBRACE
Rule 94    sentfor -> FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID PLUS PLUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
Rule 95    sentfor -> FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID MINUS MINUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
Rule 96    sentwhile -> WHILE LPARENT cond RPARENT LCURBRACE declaracion_sentencias RCURBRACE
Rule 97    sentdowhile -> DO LCURBRACE declaracion_sentencias RCURBRACE WHILE LPARENT cond RPARENT CIERRE
Rule 98    import -> INCLUDE STRINGG CIERRE
Rule 99    empty -> <empty>

Terminals, with rules where they appear

AND                  : 30
CIERRE               : 7 15 16 17 18 19 25 26 27 93 93 94 94 95 95 97 98
COMMA                : 80 83 84 85 88
CONCATSTR            : 
DIV                  : 60
DO                   : 97
DOSPUNTOS            : 
ECHO                 : 17 18 19
ELSE                 : 21 22
EQUAL                : 25 93 94 95
EXPONENCIACION       : 62
FALSE                : 29 56
FOR                  : 93 94 95
FUNCTION             : 90
ID                   : 25 26 27 49 70 71 72 73 74 87 88 93 94 94 95 95
IDENTICO             : 39
IF                   : 20 21
IGUAL                : 37
INCLUDE              : 98
INTEGER              : 48 52
LCORCHETE            : 
LCURBRACE            : 22 24 90 93 94 95 96 97
LPARENT              : 24 35 51 66 67 90 92 93 94 95 96 97
MAYOR                : 40
MAYORIG              : 41
MENOR                : 42
MENORIG              : 43
MINUS                : 27 27 58 72 72 73 73 95 95
MODULO               : 61
NFUNCTION            : 90 91 92
NOIGUAL              : 38
NOT                  : 33
OR                   : 31
PLUS                 : 26 26 57 71 71 74 74 94 94
RCORCHETE            : 
RCURBRACE            : 22 24 90 93 94 95 96 97
RETURN               : 15 16
RPARENT              : 24 35 51 66 67 90 92 93 94 95 96 97
STRING               : 53 81 84
STRINGG              : 54 82 85 98
TIMES                : 59
TRUE                 : 28 55
WHILE                : 96 97
XOR                  : 32
error                : 

Nonterminals, with rules where they appear

arg                  : 80 83 84 85 92
argfunc              : 88 90
auxsentif            : 20 21
bool                 : 
call_function        : 7 50
cond                 : 16 19 24 64 64 65 65 67 93 94 95 96 97
declaracion_sentencias : 1 3 4 22 24 90 93 94 95 96 97
empty                : 23
exp                  : 18 25 76
expsimple            : 34 34 35 35 36 44 51 79 93 93 94 95
factor               : 46 47
genif                : 20 21
import               : 1 2
opcomparacion        : 34 35 64
oplogicos            : 65
opmult               : 46
opsuma               : 44
program              : 0
sentassign           : 6
sentdowhile          : 14
sentecho             : 9
sentencias           : 4 5
sentfor              : 12
sentfunc             : 10
sentif               : 8
sentreturn           : 11
sentwhile            : 13
term                 : 44 45 46
type                 : 15 63 66 78 80
typevar              : 17 68 75
var_declaration_gen  : 69 77 83

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . import declaracion_sentencias
    (2) program -> . import
    (3) program -> . declaracion_sentencias
    (98) import -> . INCLUDE STRINGG CIERRE
    (4) declaracion_sentencias -> . sentencias declaracion_sentencias
    (5) declaracion_sentencias -> . sentencias
    (6) sentencias -> . sentassign
    (7) sentencias -> . call_function CIERRE
    (8) sentencias -> . sentif
    (9) sentencias -> . sentecho
    (10) sentencias -> . sentfunc
    (11) sentencias -> . sentreturn
    (12) sentencias -> . sentfor
    (13) sentencias -> . sentwhile
    (14) sentencias -> . sentdowhile
    (25) sentassign -> . ID EQUAL exp CIERRE
    (26) sentassign -> . ID PLUS PLUS CIERRE
    (27) sentassign -> . ID MINUS MINUS CIERRE
    (91) call_function -> . NFUNCTION
    (92) call_function -> . NFUNCTION LPARENT arg RPARENT
    (20) sentif -> . IF genif auxsentif
    (17) sentecho -> . ECHO typevar CIERRE
    (18) sentecho -> . ECHO exp CIERRE
    (19) sentecho -> . ECHO cond CIERRE
    (90) sentfunc -> . FUNCTION NFUNCTION LPARENT argfunc RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (15) sentreturn -> . RETURN type CIERRE
    (16) sentreturn -> . RETURN cond CIERRE
    (93) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE expsimple RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (94) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID PLUS PLUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (95) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID MINUS MINUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (96) sentwhile -> . WHILE LPARENT cond RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (97) sentdowhile -> . DO LCURBRACE declaracion_sentencias RCURBRACE WHILE LPARENT cond RPARENT CIERRE

    INCLUDE         shift and go to state 4
    ID              shift and go to state 15
    NFUNCTION       shift and go to state 16
    IF              shift and go to state 17
    ECHO            shift and go to state 18
    FUNCTION        shift and go to state 19
    RETURN          shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 22
    DO              shift and go to state 23

    program                        shift and go to state 1
    import                         shift and go to state 2
    declaracion_sentencias         shift and go to state 3
    sentencias                     shift and go to state 5
    sentassign                     shift and go to state 6
    call_function                  shift and go to state 7
    sentif                         shift and go to state 8
    sentecho                       shift and go to state 9
    sentfunc                       shift and go to state 10
    sentreturn                     shift and go to state 11
    sentfor                        shift and go to state 12
    sentwhile                      shift and go to state 13
    sentdowhile                    shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> import . declaracion_sentencias
    (2) program -> import .
    (4) declaracion_sentencias -> . sentencias declaracion_sentencias
    (5) declaracion_sentencias -> . sentencias
    (6) sentencias -> . sentassign
    (7) sentencias -> . call_function CIERRE
    (8) sentencias -> . sentif
    (9) sentencias -> . sentecho
    (10) sentencias -> . sentfunc
    (11) sentencias -> . sentreturn
    (12) sentencias -> . sentfor
    (13) sentencias -> . sentwhile
    (14) sentencias -> . sentdowhile
    (25) sentassign -> . ID EQUAL exp CIERRE
    (26) sentassign -> . ID PLUS PLUS CIERRE
    (27) sentassign -> . ID MINUS MINUS CIERRE
    (91) call_function -> . NFUNCTION
    (92) call_function -> . NFUNCTION LPARENT arg RPARENT
    (20) sentif -> . IF genif auxsentif
    (17) sentecho -> . ECHO typevar CIERRE
    (18) sentecho -> . ECHO exp CIERRE
    (19) sentecho -> . ECHO cond CIERRE
    (90) sentfunc -> . FUNCTION NFUNCTION LPARENT argfunc RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (15) sentreturn -> . RETURN type CIERRE
    (16) sentreturn -> . RETURN cond CIERRE
    (93) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE expsimple RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (94) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID PLUS PLUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (95) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID MINUS MINUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (96) sentwhile -> . WHILE LPARENT cond RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (97) sentdowhile -> . DO LCURBRACE declaracion_sentencias RCURBRACE WHILE LPARENT cond RPARENT CIERRE

    $end            reduce using rule 2 (program -> import .)
    ID              shift and go to state 15
    NFUNCTION       shift and go to state 16
    IF              shift and go to state 17
    ECHO            shift and go to state 18
    FUNCTION        shift and go to state 19
    RETURN          shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 22
    DO              shift and go to state 23

    declaracion_sentencias         shift and go to state 24
    sentencias                     shift and go to state 5
    sentassign                     shift and go to state 6
    call_function                  shift and go to state 7
    sentif                         shift and go to state 8
    sentecho                       shift and go to state 9
    sentfunc                       shift and go to state 10
    sentreturn                     shift and go to state 11
    sentfor                        shift and go to state 12
    sentwhile                      shift and go to state 13
    sentdowhile                    shift and go to state 14

state 3

    (3) program -> declaracion_sentencias .

    $end            reduce using rule 3 (program -> declaracion_sentencias .)


state 4

    (98) import -> INCLUDE . STRINGG CIERRE

    STRINGG         shift and go to state 25


state 5

    (4) declaracion_sentencias -> sentencias . declaracion_sentencias
    (5) declaracion_sentencias -> sentencias .
    (4) declaracion_sentencias -> . sentencias declaracion_sentencias
    (5) declaracion_sentencias -> . sentencias
    (6) sentencias -> . sentassign
    (7) sentencias -> . call_function CIERRE
    (8) sentencias -> . sentif
    (9) sentencias -> . sentecho
    (10) sentencias -> . sentfunc
    (11) sentencias -> . sentreturn
    (12) sentencias -> . sentfor
    (13) sentencias -> . sentwhile
    (14) sentencias -> . sentdowhile
    (25) sentassign -> . ID EQUAL exp CIERRE
    (26) sentassign -> . ID PLUS PLUS CIERRE
    (27) sentassign -> . ID MINUS MINUS CIERRE
    (91) call_function -> . NFUNCTION
    (92) call_function -> . NFUNCTION LPARENT arg RPARENT
    (20) sentif -> . IF genif auxsentif
    (17) sentecho -> . ECHO typevar CIERRE
    (18) sentecho -> . ECHO exp CIERRE
    (19) sentecho -> . ECHO cond CIERRE
    (90) sentfunc -> . FUNCTION NFUNCTION LPARENT argfunc RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (15) sentreturn -> . RETURN type CIERRE
    (16) sentreturn -> . RETURN cond CIERRE
    (93) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE expsimple RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (94) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID PLUS PLUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (95) sentfor -> . FOR LPARENT ID EQUAL expsimple CIERRE cond CIERRE ID MINUS MINUS RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (96) sentwhile -> . WHILE LPARENT cond RPARENT LCURBRACE declaracion_sentencias RCURBRACE
    (97) sentdowhile -> . DO LCURBRACE declaracion_sentencias RCURBRACE WHILE LPARENT cond RPARENT CIERRE

    $end            reduce using rule 5 (declaracion_sentencias -> sentencias .)
    RCURBRACE       reduce using rule 5 (declaracion_sentencias -> sentencias .)
    ID              shift and go to state 15
    NFUNCTION       shift and go to state 16
    IF              shift and go to state 17
    ECHO            shift and go to state 18
    FUNCTION        shift and go to state 19
    RETURN          shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 22
    DO              shift and go to state 23

    sentencias                     shift and go to state 5
    declaracion_sentencias         shift and go to state 26
    sentassign                     shift and go to state 6
    call_function                  shift and go to state 7
    sentif                         shift and go to state 8
    sentecho                       shift and go to state 9
    sentfunc                       shift and go to state 10
    sentreturn                     shift and go to state 11
    sentfor                        shift and go to state 12
    sentwhile                      shift and go to state 13
    sentdowhile                    shift and go to state 14

state 6

    (6) sentencias -> sentassign .

    ID              reduce using rule 6 (sentencias -> sentassign .)
    NFUNCTION       reduce using rule 6 (sentencias -> sentassign .)
    IF              reduce using rule 6 (sentencias -> sentassign .)
    ECHO            reduce using rule 6 (sentencias -> sentassign .)
    FUNCTION        reduce using rule 6 (sentencias -> sentassign .)
    RETURN          reduce using rule 6 (sentencias -> sentassign .)
    FOR             reduce using rule 6 (sentencias -> sentassign .)
    WHILE           reduce using rule 6 (sentencias -> sentassign .)
    DO              reduce using rule 6 (sentencias -> sentassign .)
    $end            reduce using rule 6 (sentencias -> sentassign .)
    RCURBRACE       reduce using rule 6 (sentencias -> sentassign .)


state 7

    (7) sentencias -> call_function . CIERRE

    CIERRE          shift and go to state 27


state 8

    (8) sentencias -> sentif .

    ID              reduce using rule 8 (sentencias -> sentif .)
    NFUNCTION       reduce using rule 8 (sentencias -> sentif .)
    IF              reduce using rule 8 (sentencias -> sentif .)
    ECHO            reduce using rule 8 (sentencias -> sentif .)
    FUNCTION        reduce using rule 8 (sentencias -> sentif .)
    RETURN          reduce using rule 8 (sentencias -> sentif .)
    FOR             reduce using rule 8 (sentencias -> sentif .)
    WHILE           reduce using rule 8 (sentencias -> sentif .)
    DO              reduce using rule 8 (sentencias -> sentif .)
    $end            reduce using rule 8 (sentencias -> sentif .)
    RCURBRACE       reduce using rule 8 (sentencias -> sentif .)


state 9

    (9) sentencias -> sentecho .

    ID              reduce using rule 9 (sentencias -> sentecho .)
    NFUNCTION       reduce using rule 9 (sentencias -> sentecho .)
    IF              reduce using rule 9 (sentencias -> sentecho .)
    ECHO            reduce using rule 9 (sentencias -> sentecho .)
    FUNCTION        reduce using rule 9 (sentencias -> sentecho .)
    RETURN          reduce using rule 9 (sentencias -> sentecho .)
    FOR             reduce using rule 9 (sentencias -> sentecho .)
    WHILE           reduce using rule 9 (sentencias -> sentecho .)
    DO              reduce using rule 9 (sentencias -> sentecho .)
    $end            reduce using rule 9 (sentencias -> sentecho .)
    RCURBRACE       reduce using rule 9 (sentencias -> sentecho .)


state 10

    (10) sentencias -> sentfunc .

    ID              reduce using rule 10 (sentencias -> sentfunc .)
    NFUNCTION       reduce using rule 10 (sentencias -> sentfunc .)
    IF              reduce using rule 10 (sentencias -> sentfunc .)
    ECHO            reduce using rule 10 (sentencias -> sentfunc .)
    FUNCTION        reduce using rule 10 (sentencias -> sentfunc .)
    RETURN          reduce using rule 10 (sentencias -> sentfunc .)
    FOR             reduce using rule 10 (sentencias -> sentfunc .)
    WHILE           reduce using rule 10 (sentencias -> sentfunc .)
    DO              reduce using rule 10 (sentencias -> sentfunc .)
    $end            reduce using rule 10 (sentencias -> sentfunc .)
    RCURBRACE       reduce using rule 10 (sentencias -> sentfunc .)


state 11

    (11) sentencias -> sentreturn .

    ID              reduce using rule 11 (sentencias -> sentreturn .)
    NFUNCTION       reduce using rule 11 (sentencias -> sentreturn .)
    IF              reduce using rule 11 (sentencias -> sentreturn .)
    ECHO            reduce using rule 11 (sentencias -> sentreturn .)
    FUNCTION        reduce using rule 11 (sentencias -> sentreturn .)
    RETURN          reduce using rule 11 (sentencias -> sentreturn .)
    FOR             reduce using rule 11 (sentencias -> sentreturn .)
    WHILE           reduce using rule 11 (sentencias -> sentreturn .)
    DO              reduce using rule 11 (sentencias -> sentreturn .)
    $end            reduce using rule 11 (sentencias -> sentreturn .)
    RCURBRACE       reduce using rule 11 (sentencias -> sentreturn .)


state 12

    (12) sentencias -> sentfor .

    ID              reduce using rule 12 (sentencias -> sentfor .)
    NFUNCTION       reduce using rule 12 (sentencias -> sentfor .)
    IF              reduce using rule 12 (sentencias -> sentfor .)
    ECHO            reduce using rule 12 (sentencias -> sentfor .)
    FUNCTION        reduce using rule 12 (sentencias -> sentfor .)
    RETURN          reduce using rule 12 (sentencias -> sentfor .)
    FOR             reduce using rule 12 (sentencias -> sentfor .)
    WHILE           reduce using rule 12 (sentencias -> sentfor .)
    DO              reduce using rule 12 (sentencias -> sentfor .)
    $end            reduce using rule 12 (sentencias -> sentfor .)
    RCURBRACE       reduce using rule 12 (sentencias -> sentfor .)


state 13

    (13) sentencias -> sentwhile .

    ID              reduce using rule 13 (sentencias -> sentwhile .)
    NFUNCTION       reduce using rule 13 (sentencias -> sentwhile .)
    IF              reduce using rule 13 (sentencias -> sentwhile .)
    ECHO            reduce using rule 13 (sentencias -> sentwhile .)
    FUNCTION        reduce using rule 13 (sentencias -> sentwhile .)
    RETURN          reduce using rule 13 (sentencias -> sentwhile .)
    FOR             reduce using rule 13 (sentencias -> sentwhile .)
    WHILE           reduce using rule 13 (sentencias -> sentwhile .)
    DO              reduce using rule 13 (sentencias -> sentwhile .)
    $end            reduce using rule 13 (sentencias -> sentwhile .)
    RCURBRACE       reduce using rule 13 (sentencias -> sentwhile .)


state 14

    (14) sentencias -> sentdowhile .

    ID              reduce using rule 14 (sentencias -> sentdowhile .)
    NFUNCTION       reduce using rule 14 (sentencias -> sentdowhile .)
    IF              reduce using rule 14 (sentencias -> sentdowhile .)
    ECHO            reduce using rule 14 (sentencias -> sentdowhile .)
    FUNCTION        reduce using rule 14 (sentencias -> sentdowhile .)
    RETURN          reduce using rule 14 (sentencias -> sentdowhile .)
    FOR             reduce using rule 14 (sentencias -> sentdowhile .)
    WHILE           reduce using rule 14 (sentencias -> sentdowhile .)
    DO              reduce using rule 14 (sentencias -> sentdowhile .)
    $end            reduce using rule 14 (sentencias -> sentdowhile .)
    RCURBRACE       reduce using rule 14 (sentencias -> sentdowhile .)


state 15

    (25) sentassign -> ID . EQUAL exp CIERRE
    (26) sentassign -> ID . PLUS PLUS CIERRE
    (27) sentassign -> ID . MINUS MINUS CIERRE

    EQUAL           shift and go to state 28
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30


state 16

    (91) call_function -> NFUNCTION .
    (92) call_function -> NFUNCTION . LPARENT arg RPARENT

    CIERRE          reduce using rule 91 (call_function -> NFUNCTION .)
    TIMES           reduce using rule 91 (call_function -> NFUNCTION .)
    DIV             reduce using rule 91 (call_function -> NFUNCTION .)
    MODULO          reduce using rule 91 (call_function -> NFUNCTION .)
    EXPONENCIACION  reduce using rule 91 (call_function -> NFUNCTION .)
    IGUAL           reduce using rule 91 (call_function -> NFUNCTION .)
    NOIGUAL         reduce using rule 91 (call_function -> NFUNCTION .)
    IDENTICO        reduce using rule 91 (call_function -> NFUNCTION .)
    MAYOR           reduce using rule 91 (call_function -> NFUNCTION .)
    MAYORIG         reduce using rule 91 (call_function -> NFUNCTION .)
    MENOR           reduce using rule 91 (call_function -> NFUNCTION .)
    MENORIG         reduce using rule 91 (call_function -> NFUNCTION .)
    PLUS            reduce using rule 91 (call_function -> NFUNCTION .)
    MINUS           reduce using rule 91 (call_function -> NFUNCTION .)
    AND             reduce using rule 91 (call_function -> NFUNCTION .)
    OR              reduce using rule 91 (call_function -> NFUNCTION .)
    XOR             reduce using rule 91 (call_function -> NFUNCTION .)
    NOT             reduce using rule 91 (call_function -> NFUNCTION .)
    RPARENT         reduce using rule 91 (call_function -> NFUNCTION .)
    COMMA           reduce using rule 91 (call_function -> NFUNCTION .)
    LPARENT         shift and go to state 31


state 17

    (20) sentif -> IF . genif auxsentif
    (24) genif -> . LPARENT cond RPARENT LCURBRACE declaracion_sentencias RCURBRACE

    LPARENT         shift and go to state 33

    genif                          shift and go to state 32

state 18

    (17) sentecho -> ECHO . typevar CIERRE
    (18) sentecho -> ECHO . exp CIERRE
    (19) sentecho -> ECHO . cond CIERRE
    (52) typevar -> . INTEGER
    (53) typevar -> . STRING
    (54) typevar -> . STRINGG
    (55) typevar -> . TRUE
    (56) typevar -> . FALSE
    (34) exp -> . expsimple opcomparacion expsimple
    (35) exp -> . LPARENT expsimple opcomparacion expsimple RPARENT
    (36) exp -> . expsimple
    (63) cond -> . type
    (64) cond -> . cond opcomparacion cond
    (65) cond -> . cond oplogicos cond
    (66) cond -> . LPARENT type RPARENT
    (67) cond -> . LPARENT cond RPARENT
    (44) expsimple -> . expsimple opsuma term
    (45) expsimple -> . term
    (68) type -> . typevar
    (69) type -> . var_declaration_gen
    (46) term -> . term opmult factor
    (47) term -> . factor
    (70) var_declaration_gen -> . ID
    (71) var_declaration_gen -> . ID PLUS PLUS
    (72) var_declaration_gen -> . ID MINUS MINUS
    (73) var_declaration_gen -> . MINUS MINUS ID
    (74) var_declaration_gen -> . PLUS PLUS ID
    (75) var_declaration_gen -> . typevar
    (76) var_declaration_gen -> . exp
    (48) factor -> . INTEGER
    (49) factor -> . ID
    (50) factor -> . call_function
    (51) factor -> . LPARENT expsimple RPARENT
    (91) call_function -> . NFUNCTION
    (92) call_function -> . NFUNCTION LPARENT arg RPARENT

    INTEGER         shift and go to state 37
    STRING          shift and go to state 38
    STRINGG         shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    LPARENT         shift and go to state 43
    ID              shift and go to state 48
    MINUS           shift and go to state 50
    PLUS            shift and go to state 49
    NFUNCTION       shift and go to state 16

    typevar                        shift and go to state 34
    exp                            shift and go to state 35
    cond                           shift and go to state 36
    expsimple                      shift and go to state 42
    type                           shift and go to state 44
    term                           shift and go to state 45
    var_declaration_gen            shift and go to state 46
    factor                         shift and go to state 47
    call_function                  shift and go to state 51

state 19

    (90) sentfunc -> FUNCTION . NFUNCTION LPARENT argfunc RPARENT LCURBRACE declaracion_sentencias RCURBRACE

    NFUNCTION       shift and go to state 52


state 20
